confik-macros/tests/trybuild/fail-forward-literal.rs
#[derive(confik::Configuration)]
#[confik(forward("hello world"))]
struct A;

fn main() {}
